tests/ui/const-generics/mgca/projection-const-recursive.stderr
error[E0275]: overflow evaluating the requirement `<() as Trait>::A == _`
  --> $DIR/projection-const-recursive.rs:12:5
   |
LL |     type const A: () = <() as Trait>::A;
   |     ^^^^^^^^^^^^^^^^

error[E0275]: overflow evaluating the requirement `<() as Trait>::A == _`
  --> $DIR/projection-const-recursive.rs:12:5
   |
LL |     type const A: () = <() as Trait>::A;
   |     ^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0284]: type annotations needed
  --> $DIR/projection-const-recursive.rs:12:5
   |
LL |     type const A: () = <() as Trait>::A;
   |     ^^^^^^^^^^^^^^^^ cannot infer the value of the constant `_`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0275, E0284.
For more information about an error, try `rustc --explain E0275`.
